# tlns-obs-scripts

./: README.md  pyproject.toml  vlc.py
foobar2000/: README.md  obs_script.py  pyproject.toml
foobar2000/foo_httpcontrol_exporter/: config
foobar2000/foo_httpcontrol_exporter/js/: state.json
vlc/: README.md  vlc.py
