[tool.poetry]
name = "obs-scripts"
version = "0.1.0"
description = ""
authors = ["timelessnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.14.2"
requests = "^2.32.3"
orjson = "^3.10.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
