[project]
name = "foobar2k-server"
version = "0.1.0"
description = ""
authors = [
    {name = "timelessnesses",email = "timelessnesses@timelessnesses.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
